<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Otago PsyAn Lab</string>
    <string name="action_authenticate">Authenticate</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_discard">Discard</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="label_authors">Authors:</string>
    <string name="label_date_created">Date Created:</string>
    <string name="label_file_size">File Size:</string>
    <string name="label_last_active">Last Active:</string>
    <string name="label_last_run">Last Run:</string>
    <string name="label_number_subjects">Total Subjects:</string>
    <string name="label_record_size">Records:</string>
    <string name="label_select_user">Select User</string>
    <string name="label_user_experiments">Experiments:</string>
    <string name="label_user_records">Records:</string>
    <string name="label_user_subjects">Total Subjects:</string>
    <string name="menu_add">Add</string>
    <string name="menu_admin_password">Admin Password</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_import">Import</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_new_user">New</string>
    <string name="menu_records">Records</string>
    <string name="menu_run">Run Experiment</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_settings">Settings</string>
    <string name="title_admin_password">Set Administrator Password</string>
    <string name="title_authenticate">Authorisation Required</string>
    <string name="section_title_experiments">EXPERIMENTS</string>
    <string name="title_select_users">Select Users</string>
    <string name="subtitle_fmt_num_items_selected">%d items selected</string>
    <string name="subtitle_one_item_selected">One item selected</string>
    <string name="message_auth_failure">Sorry, try again.</string>
    <string name="message_name_empty">The user must have a name.</string>
    <string name="message_password_mismatch">Password mismatch.</string>
    <string name="message_password_required">You need to enter a password</string>
    <string name="message_error">An error has occurred.</string>
    <string name="abs__action_mode_done"></string>
    <string name="text_delete_user_warning">User and all the associated data will be deleted permanently.</string>
    <string name="warning_missing_password">Please set password</string>
    <string name="warning_password_mismatch">Passwords do not match</string>
    <string name="title_set_password">Set Password</string>
    <string name="authentication_failure">Authentication Failure</string>
    <string name="text_date_never">never</string>
    <string name="label_last_run">Last Run:</string>
    <string name="label_number_subjects">Total Subjects:</string>
    <string name="label_record_size">Records:</string>
    <string name="label_file_size">File Size:</string>
    <string name="label_date_created">Date Created:</string>
    <string name="label_authors">Authors:</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_import">Import</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>
    <string name="menu_records">Records</string>
    <string name="menu_run">Run Experiment</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
    <string name="symbol_required">*</string>
    <string name="filler_experiment_name">Self Paced Reading Experiment</string>
    <string name="filler_experiment_authors">Hunter Hatfield, Tonic Artos.</string>
    <string name="filler_experiment_created">c. 28 Feb, 2013</string>
    <string name="filler_experiment_ran">r. 1 April, 2013</string>
    <string name="filler_experiment_description">An experiment description that uses markdown syntax to format itself.</string>
    <string name="text_required_infotext">*required</string>
    <string name="title_import">Pick Experiment</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_import">Import</string>
    <string name="action_new">New</string>
    <string name="file_header_experiments">Experiments</string>
    <string name="format_error_importing">Errors were encountered while reading %s.</string>
    <string name="record_section_header">Collected Records</string>
    <string name="filler_record_header_count">40 records</string>
    <string name="format_header_record_count">%d records</string>
    <string name="label_experiment">Experiment</string>
    <string name="label_records">Records</string>

</resources>